# premier-projet-data

./: .gitignore  Dockerfile  LICENCE  Notes.md  README.md  app.py  clients.csv  csv_to_mysql.py  docker-compose.yml  pyproject.toml  regex.py  td.md  td.py
sql/: install.sql
